# 2025-final-individual-MrOlegTitov

solution/: Dockerfile  README.md  docker-compose.yml  grafana.db  openapi.json  pyproject.toml
solution/adsplatform/: __init__.py
solution/adsplatform/api/: __init__.py  main.py  utils.py
solution/adsplatform/api/routers/: ads.py  advertisers.py  campaigns.py  clients.py  gpt.py  s3.py  statistics.py  time.py
solution/adsplatform/bot/: __init__.py  main.py  states.py  utils.py
solution/adsplatform/bot/keyboards/: fabric.py  reply.py
solution/adsplatform/bot/middlewares/: user.py
solution/adsplatform/bot/routers/: campaign_create.py  campaign_delete.py  campaign_edit.py  campaign_list.py  campaign_statistics.py  commands.py  login.py  my_statistics.py  unhandled.py
solution/adsplatform/clients/: api.py  s3.py  yandexgpt.py
solution/adsplatform/config/: __init__.py
solution/adsplatform/db/: __init__.py  models.py
solution/adsplatform/schemas/: ads.py  advertisers.py  campaigns.py  clients.py  gpt.py  queries.py  statistics.py  time.py
solution/tests/: prepare_data.py
solution/tests/e2e/: config.yml  pytest.ini  test_01_root.tavern.yml  test_02_clients.tavern.yml  test_03_advertisers.tavern.yml  test_04_mlscores.tavern.yml  test_05_time.tavern.yml  test_06_campaigns.tavern.yml  test_07_ads.tavern.yml  test_08_campaign_stats.tavern.yml  test_09_advertiser_stats.yml  test_10_gpt.tavern.yml
solution/tests/e2e/components/: base_ad.yml
solution/tests/unit/: test_campaign_serialization.py  test_stats_serialization.py  test_yandex_gpt.py
(+15 files in other folders)
